--- a/app.json
+++ b/app.json
@@ -38,6 +38,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "0e718019-f37d-468f-9b20-765c0161f13b"
+      }
     }
   }
 }
