working on the camera stuff

--- a/app.json
+++ b/app.json
@@ -17,7 +17,11 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.osimuka.agrinova360"
+      "package": "com.osimuka.agrinova360",
+      "permissions": [
+        "CAMERA",
+        "RECORD_AUDIO"
+      ]
     },
     "web": {
       "bundler": "metro",
