--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.1",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
     "@react-native-firebase/firestore": "^22.2.0",
@@ -41,21 +43,28 @@
     "react-native": "0.79.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-mmkv": "^3.3.0",
     "react-native-paper": "^5.14.5",
+    "react-native-pressable-opacity": "^1.0.10",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.16.1",
     "react-native-view-shot": "^4.0.3",
     "react-native-vision-camera": "^4.7.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-worklets-core": "^1.6.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native-table-component": "^1.2.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
