update on the camera package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "source.organizeImports": "explicit",
     "source.sortMembers": "explicit"
   },
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
