--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "agrinova360",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/splashphoto.png",
+    "icon": "./assets/images/splash.png",
     "scheme": "agrinova360",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/splashphoto.png",
+        "foregroundImage": "./assets/images/splash.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
@@ -26,20 +26,25 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/splashphoto.png"
+      "favicon": "./assets/images/splash.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splashphoto.png",
+          "image": "./assets/images/splash.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
       ],
-      "react-native-vision-camera"
+      [
+        "react-native-vision-camera",
+        {
+          "cameraPermission": "Allow AgriNova360 to access your camera"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
