--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.79.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-mmkv": "^3.3.0",
     "react-native-paper": "^5.14.5",
     "react-native-pressable-opacity": "^1.0.10",
