--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
