--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-svg": "^15.12.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.16.1",
     "react-native-view-shot": "^4.0.3",
